got flatpages up

--- a/django_ecommerce/django_ecommerce/templates/base.html
+++ b/django_ecommerce/django_ecommerce/templates/base.html
@@ -58,7 +58,7 @@ html5.js">
 <div class="masthead">
     <ul class="nav nav-pills pull-right">
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="/pages/about">About</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
     <h3><span class="fui-settings-16 muted">Your
