--- a/django_ecommerce/django_ecommerce/templates/index.html
+++ b/django_ecommerce/django_ecommerce/templates/index.html
@@ -1,11 +1,9 @@
 ￼{% extends 'base.html' %}
 ￼{% block content %}
 ￼<div class="jumbotron">
-    ￼<img src="http://tischlerei-weissenbacher.at/img/
-    ￼responsive_web_design.png">
+    ￼<img src="http://tischlerei-weissenbacher.at/img/responsive_web_design.png">
     ￼<h1>Please put some text here.</h1>
-    ￼<p class="lead">If you want, you can add some text here
-    ￼as well. Or not.</p>
+    ￼<p class="lead">If you want, you can add some text here as well. Or not.</p>
     ￼<a class="btn btn-large btn-success"
         ￼href="contact">Contact us today to get
         ￼started</a><br/><br/><br/>
