got contact form working

--- a/django_ecommerce/django_ecommerce/templates/base.html
+++ b/django_ecommerce/django_ecommerce/templates/base.html
@@ -59,7 +59,7 @@ html5.js">
     <ul class="nav nav-pills pull-right">
         <li><a href="{% url 'home' %}">Home</a></li>
         <li><a href="/pages/about">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="{% url 'contact' %}">Contact</a></li>
     </ul>
     <h3><span class="fui-settings-16 muted">Your
             MVP!</span></h3>
