--- a/django_ecommerce/django_ecommerce/templates/index.html
+++ b/django_ecommerce/django_ecommerce/templates/index.html
@@ -5,9 +5,8 @@
     src="http://tischlerei-weissenbacher.at/img/responsive_web_design.png"> -->
     ￼<h1>Please put some text here.</h1>
     ￼<p class="lead">If you want, you can add some text here as well. Or not.</p>
-    ￼<a class="btn btn-large btn-success"
-        ￼href="contact">Contact us today to get
-        ￼started</a><br/><br/><br/>
+    ￼<a class="btn btn-large btn-success"￼href="/register">Register today to get started!</a>
+     <br/><br/><br/>
     ￼<a href="https://twitter.com/RealPython"
         ￼class="twitter-follow-button" data-show-count="false"
         ￼data-size="large">Follow @RealPython</a>
