--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -1,103 +1,30 @@
-{% load static %}
-
 <!DOCTYPE html>
+{% load staticfiles %}
+
 <html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mos Eisley's Cantina</title>
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/mec.css" %}" rel="stylesheet">
 
-<head>
-  <meta charset="utf-8">
-  <title>Your MVP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Setting up an MVP with Django by RealPython.com">
-  <meta name="author" content="Michael Herman">
-  <!-- Le styles -->
-  <link href="http://www.realpython.com/css/bootstrap.css" rel="stylesheet">
-  <style>
 
-    body {
-      padding-top: 20px;
-      padding-bottom: 40px;
-    }
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Welcome to Mos Eisley's Cantina</h1>
 
-    /* Custom container */
-    .container-narrow {
-      margin: 0 auto;
-      max-width: 700px;
-    }
-    .container-narrow > hr {
-      margin: 30px 0;
-    }
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{% static "js/jquery.min.js" %}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+  </body>
+</html>
 
-    /* Main marketing message and sign up button */
-    .jumbotron {
-      margin: 60px 0;
-      text-align: center;
-    }
-    .jumbotron h1 {
-      font-size: 72px;
-      line-height: 1;
-    }
-    .jumbotron .btn {
-      font-size: 21px;
-      padding: 14px 24px;
-    }
-
-    /* Supporting marketing content */
-    .marketing {
-      margin: 60px 0;
-    }
-    .marketing p + h4 {
-      margin-top: 28px;
-    }
-  </style>
-    <script src="https://js.stripe.com/v1/" type="text/javascript"></script>
-    <script type="text/javascript">
-    //<![CDATA[
-    Stripe.publishableKey = '{{ publishable }}';
-    //]]>
-    </script>
-    <script src="{% get_static_prefix %}jquery.js" type="text/javascript"></script>
-    <script src="{% get_static_prefix %}application.js" type="text/javascript"></script>
-  </style>
-</head>
-<body>
-
-    <div class="container-narrow">
-      <div class="masthead">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="/pages/about">About</a></li>
-          <li><a href="{% url 'contact' %}">Contact</a></li>
-          {% if user %}
-            <li><a href="{% url 'sign_out' %}">Logout</a></li>
-          {% else %}
-            <li><a href="{% url 'sign_in' %}">Login</a></li>
-            <li><a href="{% url 'register' %}">Register</a></li>
-          {% endif %}
-        </ul>
-        <h3><span class="fui-settings-16 muted">Your MVP!</span></h3>
-      </div>
-
-      <hr>
-      <div id="messages">
-        {% if messages %}
-        {% for message in messages %}
-          <div class="alert alert-{{message.tags}}">
-            <a class="close" data-dismiss="alert">×</a>
-              {{message}}
-         </div>
-        {% endfor %}
-        {% endif %}
-      </div>
-
-      <div class="container-narrow">
-        {% block content %}
-        {% endblock %}
-      </div>
-
-      <hr>
-
-      <div class="footer">
-        <p>Copyright © 2013 <a href="http://www.yoursite.com">Your MVP</a>. Developed by <a href="http://www.mherman.org">Your Name Here</a>. Powered by Django.</P></p>
-      </div>
-
-    </div> <!-- /container -->
