--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -78,10 +78,10 @@
       </footer>
 
     </div><!-- /.container -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!-- all js here so page loads faster -->
     <script src="{% static "js/jquery.min.js" %}"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/application.js" %}"></script>
   </body>
 </html>
 
