--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -23,12 +23,10 @@
   </head>
   <body>
     <!-- NAVBAR ==========================================   -->
-    <div class="navbar-wrapper">
       <div class="container">
 
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
+        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+            <header class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -36,7 +34,7 @@
                 <span class="icon-bar"></span>
               </button>
 	      <a class="navbar-brand" href="{% url 'home' %}">Mos Eisley's Cantina</a>
-            </div>
+            </header>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
 	        <li class="active"><a href="{% url 'home' %}">Home</a></li>
@@ -50,11 +48,9 @@
                 {% endif %}
 	      </ul>
             </div>
-          </div>
-        </div>
+        </nav>
 
       </div>
-    </div>
     
     <div class="container">
       <div id="messages">
