made one more html 5 section change

--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -52,7 +52,7 @@
 
       </div>
     
-    <div class="container">
+    <section class="container">
       <div id="messages">
         {% if messages %}
         {% for message in messages %}
@@ -73,7 +73,7 @@
 	<p>&copy; 2014 <a href="http://j1z0.com">Your Name Here</a> &middot;  Powered by Django. </p>
       </footer>
 
-    </div><!-- /.container -->
+    </section><!-- /.container -->
     <!-- all js here so page loads faster -->
     <script src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
