updated jquery to 1.11 and named js properly

--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -75,7 +75,7 @@
 
     </section><!-- /.container -->
     <!-- all js here so page loads faster -->
-    <script src="{% static "js/jquery.min.js" %}"></script>
+    <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <script src="{% static "js/application.js" %}"></script>
   </body>
