HTML5 semantic section stuff

--- a/django_ecommerce/templates/base.html
+++ b/django_ecommerce/templates/base.html
@@ -19,7 +19,7 @@
 
     <link href="{% static "css/mec.css" %}" rel="stylesheet">
     <!-- custom style of carousel template from bootstrap.com -->
-    <link href="carousel.css" rel="stylesheet">
+    <link href="{% static "css/carousel.css" %}" rel="stylesheet">
   </head>
   <body>
     <!-- NAVBAR ==========================================   -->
@@ -70,7 +70,7 @@
 
       <footer>
 	<p class="pull-right"><a href="">Back to top</a></p> 
-	<p>&copy; 2014 <a href="http://j1z0.com">Your Name Here</a> &middot;  Powered by Django. </p>
+	<p class="pull-left">&copy; 2014 <a href="http://j1z0.com">The Jedi Council</a></p> <p class="text-center"> &middot;  Powered by about 37 AT-AT Walkers, Python 3 and Django 1.6 &middot; </p>
       </footer>
 
     </section><!-- /.container -->
