--- a/django_ecommerce/templates/index.html
+++ b/django_ecommerce/templates/index.html
@@ -14,37 +14,33 @@
       <div class="carousel-inner">
         <figure class="item active">
 		<img src="{% static 'img/darth.jpg' %}" alt="Join the Dark Side">
-          <div class="container">
             <figcaption class="carousel-caption">
               <h1>Join the Dark Side</h1>
               <p>Or the light side.  Doesn't matter.  If your into StarWars then this is the place for you.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <p><a class="btn btn-lg btn-primary" href="{% url 'register' %}" role="button">Sign up today</a></p>
             </figcaption>
-          </div>
         </figure>
         <figure class="item">
 		<img src="{% static 'img/star-wars-battle.jpg' %}" alt="Wage War">
-          <div class="container">
             <figcaption class="carousel-caption">
               <h1>Wage War</h1>
               <p>Daily chats, Weekly Gamming sessions, Monthly real-life battle re-inactments.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">I'm ready to fight</a></p>
             </figcaption>
-          </div>
         </figure>
         <figure class="item">
 		<img src="{% static 'img/star-wars-cast.jpg' %}" alt="Meet People">
-          <div class="container">
             <figcaption class="carousel-caption">
               <h1>Meet fellow StarWars Fans</h1>
               <p>Join forces with fellow padwans and Jedi who lives near you.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Check the Members Map</a></p>
             </figcaption>
-          </div>
         </figure>
       </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left"></span></a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"></span></a>
     </section>
 <!-- /.carousel -->
 {% endblock content %}
