--- a/django_ecommerce/static/css/mec.css
+++ b/django_ecommerce/static/css/mec.css
@@ -22,3 +22,18 @@ h1,
 {
     height: 40px;
 }
+
+#darth_caption
+{
+  top: 0%;
+  left: 10%;
+  right: 60%;
+  text-align:left;
+}
+
+@media screen and (min-width: 992px){
+    #starwars-fans
+    {
+        color : red;
+    }
+}
