tag: Ch8_ex1b completed exercise 1b

--- a/django_ecommerce/templates/main/index.html
+++ b/django_ecommerce/templates/main/index.html
@@ -29,9 +29,9 @@
             </figcaption>
         </figure>
         <figure class="item">
-		<img src="{% static 'img/star-wars-cast.jpg' %}" alt="Meet People">
+	    <img src="{% static 'img/star-wars-cast.jpg' %}" alt="Meet People">
             <figcaption class="carousel-caption">
-              <h1 id="starwars-fans">Meet fellow StarWars Fans</h1>
+	      <h1> Meet fellow StarWars Fans</h1>
               <p>Join forces with fellow padwans and Jedi who lives near you.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Check the Members Map</a></p>
             </figcaption>
