sign in form css styling completed

--- a/django_ecommerce/templates/__base.html
+++ b/django_ecommerce/templates/__base.html
@@ -20,6 +20,10 @@
     <link href="{% static "css/mec.css" %}" rel="stylesheet">
     <!-- custom style of carousel template from bootstrap.com -->
     <link href="{% static "css/carousel.css" %}" rel="stylesheet">
+    {% block extra_css %}
+    {% endblock %} 
+
+
   </head>
   <body>
     <!-- NAVBAR ==========================================   -->
