--- a/django_ecommerce/templates/payments/sign_in.html
+++ b/django_ecommerce/templates/payments/sign_in.html
@@ -1,15 +1,13 @@
 {% extends "__base.html" %}
+{% load staticfiles %}
+{% block extra_css %}
+
+<link href="{% static 'css/signin.css' %}" rel="stylesheet">
+{% endblock %}
 {% block content %}
-  <div class="row">
-    <div class="span6 columns">
-    </div>
-  </div>
-  <div class="page-header">
-    <h1>Sign In</h1>
-  </div>
-  <div class="row">
-    <div class="span6 columns">
-      <form accept-charset="UTF-8" action="{% url 'sign_in' %}" class="form-stacked" method="post">{% csrf_token %}
+   <div class="container">
+      <form accept-charset="UTF-8" action="{% url 'sign_in' %}" class="form-signin" role="form" method="post">{% csrf_token %}
+	<h2 class="form-signin-heading">Sign in</h2>
         {% if form.is_bound and not form.is_valid %}
         <div class="alert-message block-message error">
           <div class="errors">
@@ -25,10 +23,7 @@
         </div>
         {% endif %}
         {% for field in form %}{% include "payments/_field.html" %}{% endfor %}
-        <div class="actions">
-          <input class="btn primary" name="commit" type="submit" value="Sign in">
-        </div>
+          <input class="btn btn-lg btn-primary btn-block" name="commit" type="submit" value="Sign in">
       </form>
-    </div>
-  </div>  
+   </div>
 {% endblock %}
