--- a/django_ecommerce/templates/main/index.html
+++ b/django_ecommerce/templates/main/index.html
@@ -48,12 +48,7 @@
 <section class="container marketing">
   <!-- Three columns of text below the carousel -->
   <div class="row">
-    {% marketing__circle_item img_name="yoda.jpg" heading="Hone your Jedi Skills" caption="All members have access to our unique training and achievemnts latters.  Show of your StarWars skills, progress through the levels and show everyone who the top Jedi Master is!" %}
-    
-    {% marketing__circle_item img_name="clone_army.jpg" heading="Build your Clan" caption="Engage in meanigful conversation, or bloodthirsty battle! If it's related to StarWars you better belive we do it it. :)" %}
-    
-    {% marketing__circle_item img_name="leia.jpg" heading="Find Love" caption="Everybody knows StarWars fans are the best mates for StarWars fans.  Find your Princess Leia or Hans Solo and explore the starts together." button_title="Sign Up Now" %}
-
+    {% marketing__circle_item %}
   </div> <!-- /.row -->
 </section>
 {% endblock content %}
