--- a/django_ecommerce/templates/main/user.html
+++ b/django_ecommerce/templates/main/user.html
@@ -4,7 +4,7 @@
     <div class="span6 columns">
     </div>
   </div>
-  <h1>Member's Only Page</h1><br/>
+  <h1>Member's only Page</h1><br/>
   <h3>Welcome {{ user.name }}.</h3>
   <p>Click <a href="{% url 'edit' %}">here</a> to make changes to your credit card.</p>
 {% endblock %}
