got basic design done for user page Chapter 9

--- a/django_ecommerce/templates/__base.html
+++ b/django_ecommerce/templates/__base.html
@@ -54,9 +54,7 @@
             </div>
         </nav>
 
-      </div>
-    
-    <section class="container">
+    <section>
       <div id="messages">
         {% if messages %}
         {% for message in messages %}
@@ -78,6 +76,7 @@
       </footer>
 
     </section>
+  </div> <!--container-->
     <!-- all js here so page loads faster -->
     <script src="https://js.stripe.com/v2/" type="text/javascript"></script>
     <script type="text/javascript">
