--- a/django_ecommerce/static/css/mec.css
+++ b/django_ecommerce/static/css/mec.css
@@ -34,3 +34,31 @@ h2,
   }
 }
 
+.info-box
+{	
+    border: 2px solid #000000;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 5px;
+    background-color: #eee;
+}
+#user_info
+{
+    text-align: center;
+    margin-left: 20px;
+}
+#user_info ul
+{
+    list-style-type: none;
+    text-align: left;
+}
+.member-page
+{
+    padding-top: 20px;
+    padding-bottom: 40px;
+    background-color: white;
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-top: -20px;
+}
