--- a/django_ecommerce/templates/main/user.html
+++ b/django_ecommerce/templates/main/user.html
@@ -1,10 +1,62 @@
 {% extends "__base.html" %}
+{% load staticfiles %}
 {% block content %}
-  <div class="row">
-    <div class="span6 columns">
+  <div class="row member-page">	  
+    <div class="col-sm-8">
+      <div class="row">
+      <section class="info-box" id="updates">
+        <h1>Report back to base</h1>
+	<div class="input-group">
+	  <input id="status" type="text" class="form-control" placeholder="{{user.name}} whats your status?">
+	  <span class="input-group-btn">
+	    <button class="btn btn-primary" type="button">Report</button>
+	  </span>
+	</div>
+      </section>
+      <section class="info-box" id="latest_happenings">
+        <h1>Recent Status Reports</h1>
+	<div class="media">
+	  <div class="media-object pull-left">
+	  <img src="{% static 'img/darth.jpg' %}" width="32" height="32"
+	     alt="user_name"/>
+	  </div>
+	  <div class="media-body">
+	    <p>I find your lack of faith disturbing</p>
+	</div>
+	<div class="media">
+	  <div class="media-object pull-left">
+	  <img src="{% static 'img/darth.jpg' %}" width="32" height="32"
+	     alt="user_name"/>
+	  </div>
+	  <div class="media-body">
+	    <p>I find your lack of faith disturbing</p>
+	</div>
+	<div class="media">
+	  <div class="media-object pull-left">
+	  <img src="{% static 'img/darth.jpg' %}" width="32" height="32"
+	     alt="user_name"/>
+	  </div>
+	  <div class="media-body">
+	    <p>I find your lack of faith disturbing</p>
+	</div>
+      </section>
+      </div>
+    </div>
+    <div class="col-sm-4"> 
+     <div class="row">
+      <section class="info-box" id="user_info">
+        <h1>Jedi Badge</h1>
+	  <img class="img-circle" src="{% static 'img/yoda.jpg' %}" width="140"
+	    height="140" alt="user.avatar"/>
+	<ul>
+	   <li>Rank: Padwan</li>
+	   <li>Name: {{user.name }}</li>
+	   <li>Email: {{user.email }}</li>
+	   <li><a href="#">Show Achievements</a>
+	  </ul>
+        <p>Click <a href="{% url 'edit' %}">here</a> to make changes to your credit card.</p>
+      </section>
+     </div>
     </div>
   </div>
-  <h1>Member's only Page</h1><br/>
-  <h3>Welcome {{ user.name }}.</h3>
-  <p>Click <a href="{% url 'edit' %}">here</a> to make changes to your credit card.</p>
 {% endblock %}
