--- a/django_ecommerce/templates/payments/edit.html
+++ b/django_ecommerce/templates/payments/edit.html
@@ -5,13 +5,13 @@
     </div>
   </div>
   <div class="page-header">
-    <h1>Update your credit card information</h1>
+    <h1>update your credit card information</h1>
   </div>
   <div class="row">
     <div class="span6 columns">
       <form id="user_form" accept-charset="UTF-8" action="{% url 'edit' %}" class="form-stacked"  method="post">
       {% csrf_token %}
-      {% include "payments/cardform.html" %}
+      {% include "payments/_cardform.html" %}
       </form>
     </div>
   </div>  
