--- a/django_ecommerce/templates/main/_statusupdate.html
+++ b/django_ecommerce/templates/main/_statusupdate.html
@@ -5,7 +5,7 @@
 	  role="form" method="post">{% csrf_token %}
     <div class="input-group">
       <input id="status" type="text" class="form-control" name="status" 
-              placeholder="{{user.name}} whats your status?">
+              placeholder="whats your 20?">
       <span class="input-group-btn">
         <button class="btn btn-primary" type="submit">Report</button>
       </span>
