--- a/django_ecommerce/templates/main/user.html
+++ b/django_ecommerce/templates/main/user.html
@@ -4,13 +4,14 @@
   <div class="row member-page">	  
     <div class="col-sm-8">
       <div class="row">
-        {% include "main/_statusupdate.html" %}
+	{% include "main/_announcements.html" %}
         {% include "main/_lateststatus.html" %}
       </div>
     </div>
     <div class="col-sm-4"> 
      <div class="row">
        {% include "main/_jedibadge.html" %}
+       {% include "main/_statusupdate.html" %}
      </div>
     </div>
   </div>
