tag Ch9_ex2 looks good

--- a/django_ecommerce/templates/main/_jedibadge.html
+++ b/django_ecommerce/templates/main/_jedibadge.html
@@ -8,7 +8,7 @@
       <li>Rank: {{user.rank}}</li>
       <li>Name: {{user.name }}</li>
       <li>Email: {{user.email }}</li>
-      <li><a href="#">Show Achievements</a>
+      <li><a id="show-achieve" href="#">Show Achievements</a>
     </ul>
     <p>Click <a href="{% url 'edit' %}">here</a> to make changes to your credit card.</p>
 </section>
