--- a/django_ecommerce/templates/__base.html
+++ b/django_ecommerce/templates/__base.html
@@ -84,9 +84,11 @@
       Stripe.publishableKey = '{{ publishable }}';
       //]]>
     </script>   
-    <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/application.js" %}"></script>
+    <script src="{% static "js/jquery-1.11.0.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/bootstrap.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/application.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/angular.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/userPollCtrl.js" %}" type="text/javascript"></script>
   </body>
 </html>
 
