--- a/django_ecommerce/templates/main/user.html
+++ b/django_ecommerce/templates/main/user.html
@@ -7,7 +7,7 @@
   <div class="row member-page">	  
     <div class="col-sm-8">
       <div class="row">
-	{% include "main/_announcements.html" %}
+        {% include "main/_announcements.html" %}
         {% include "main/_lateststatus.html" %}
       </div>
     </div>
@@ -15,6 +15,7 @@
      <div class="row">
        {% include "main/_jedibadge.html" %}
        {% include "main/_statusupdate.html" %}
+       {% include "djangular_polls/_polls.html" %}
      </div>
     </div>
   </div>
