--- a/django_ecommerce/templates/main/user.html
+++ b/django_ecommerce/templates/main/user.html
@@ -20,3 +20,7 @@
     </div>
   </div>
 {% endblock %}
+{% block extrajs %}
+    <script src="{% static "js/angular.min.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/userPollCtrl.js" %}" type="text/javascript"></script>
+{% endblock %}
