tag:djangular_ex_3a finished the Show achievements stuff

--- a/django_ecommerce/templates/djangular_polls/_polls.html
+++ b/django_ecommerce/templates/djangular_polls/_polls.html
@@ -1,4 +1,4 @@
-<section class="info-box" id="polls" ng-app="pollsApp">
+<section class="info-box" id="polls">
   <div ng-controller='UserPollCtrl'>
     <h2>Poll: [[ poll.title ]]</h2> 
     <div ng-repeat="item in poll.items">
