--- a/django_ecommerce/templates/__base.html
+++ b/django_ecommerce/templates/__base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
-<html lang="en">
+<html lang="en" ng-app="mecApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -84,6 +84,7 @@
       Stripe.publishableKey = '{{ publishable }}';
       //]]>
     </script>   
+    <script src="{% static "js/angular.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/jquery-1.11.0.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/bootstrap.min.js" %}" type="text/javascript"></script>
     <script src="{% static "js/application.js" %}" type="text/javascript"></script>
